fix alignment issue

--- a/assets/sass/nav/_nav-primary.scss
+++ b/assets/sass/nav/_nav-primary.scss
@@ -52,6 +52,7 @@
       color: inherit;
       font-size: inherit;
       text-decoration: none;
+      display: flex;
     }
   }
 
